package com.foosball.dto;

/**
 * Wire shape for a single configuration entry (name/value pair).
 */
public record ConfigurationItemDto(String name, String value) {
}
